pilot/pkg/security/authz/builder/testdata/path15-in.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-1
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
      version: v1
  rules:
    - to:
        - operation:
            paths: ["/exact", "/prefix/*", "*/suffix", "*", "regex:regexp"]
            notPaths: ["/not-exact", "/not-prefix/*", "*/not-suffix", "*", "regex:not-regexp"]
