pilot/pkg/security/authz/builder/testdata/path15-out.yaml
name: envoy.filters.http.rbac
typedConfig:
  '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
  rules:
    policies:
      ns[foo]-policy[httpbin-1]-rule[0]:
        permissions:
        - andRules:
            rules:
            - orRules:
                rules:
                - urlPath:
                    path:
                      exact: /exact
                - urlPath:
                    path:
                      prefix: /prefix/
                - urlPath:
                    path:
                      suffix: /suffix
                - urlPath:
                    path:
                      safeRegex:
                        googleRe2: {}
                        regex: .+
                - urlPath:
                    path:
                      exact: regex:regexp
            - notRule:
                orRules:
                  rules:
                  - urlPath:
                      path:
                        exact: /not-exact
                  - urlPath:
                      path:
                        prefix: /not-prefix/
                  - urlPath:
                      path:
                        suffix: /not-suffix
                  - urlPath:
                      path:
                        safeRegex:
                          googleRe2: {}
                          regex: .+
                  - urlPath:
                      path:
                        exact: regex:not-regexp
        principals:
        - andIds:
            ids:
            - any: true
